--- a/_units/09.md
+++ b/_units/09.md
@@ -46,7 +46,7 @@ The distinction between harmony and harmonic progression is an important one.  C
 
 {% include img-figure url="/MUTOR/assets/images/unit9_cmaj.png" description="C major triad" %}
 
-In the key of C major, this chord has a feeling of stability since it is the tonic of the key.  However, in the key of F major, the same chord will sound less stable as if it should move to F.  As we can see, the context in which a chord appears is important.  Another example is the famous "Tristan chord"—the opening harmony of Richard Wagner's opera Tristan und Isolde (figure 9.3).  The nature of this sonority has been debated for decades, but the debate centers less around the chord itself, and more around the function and way in which it resolves.
+In the key of C major, this chord has a feeling of stability since it is the tonic of the key.  However, in the key of F major, the same chord will sound less stable as if it should move to F. As we can see, the context in which a chord appears is important. Another example is the famous "Tristan chord"—the opening harmony of Richard Wagner's opera Tristan und Isolde (figure 9.3).  The nature of this sonority has been debated for decades, but the debate centers less around the chord itself, and more around the function and way in which it resolves.
 
 {% include img-figure url="/MUTOR/assets/images/unit9_tristan.png" description="Tristan Prelude" %}
 
@@ -74,7 +74,7 @@ f_n=f_r(\sqrt[12]{2})^n
 
 Although a thorough discussion of tuning is beyond the scope of this unit (Wikipedia has numerous pages and links devoted to the topic), we can say a few things about equal temperament and the systems that it replaced.
 
-Any tuning system must be measured against just intonation in which intervals are calculated by integer ratios, e.g. a just fifth is 3 / 2, a just fourth is 4 / 3, and a just major third is 5 / 4.  Although the just intervals are considered by many to be the most pleasing, they can lead to complex problems.  For example, a just major third above A1 (55 Hz) is 68.75 Hz, but if we use 55 Hz (A1) as our reference frequency and calculate a C#1 by going up in fifths, we arrive at 69.609375 (55 • 1.5 = 82.5 (E2) • 1.5 = 123.75 (B2) • 1.5 = 185.625 (F#3) • 1.5 = 278.4375 (C#4) / 4 = 69.609375).  One solution to this problem is to tune certain keys as perfectly as possible and allow other more distant keys to be out of tune.  Equal temperament solves the problem by making every interval (with the exception of the octave) slightly out of tune.  For example, in the case of perfect fifths, in equal temperament,
+Any tuning system must be measured against just intonation in which intervals are calculated by integer ratios, e.g. a just fifth is 3/2, a just fourth is 4/3, and a just major third is 5/4.  Although the just intervals are considered by many to be the most pleasing, they can lead to complex problems.  For example, a just major third above A1 (55 Hz) is 68.75 Hz, but if we use 55 Hz (A1) as our reference frequency and calculate a C#1 by going up in fifths, we arrive at 69.609375 (55 • 1.5 = 82.5 (E2) • 1.5 = 123.75 (B2) • 1.5 = 185.625 (F#3) • 1.5 = 278.4375 (C#4) / 4 = 69.609375).  One solution to this problem is to tune certain keys as perfectly as possible and allow other more distant keys to be out of tune.  Equal temperament solves the problem by making every interval (with the exception of the octave) slightly out of tune.  For example, in the case of perfect fifths, in equal temperament,
 
 \begin{equation}
 55(\sqrt[12]{2})^7 = 82.4069
@@ -132,23 +132,21 @@ Theorists have created tunings from either deriving them from the overtone serie
 ## Meantone Temperament
 
 During the Renaissance and Baroques periods meantone temperament was wide-spread: lowering fifths to keep the thirds as just as possible. 
-A number of variants have been in use, quarter-comma and third-comma meantone temperament among them. The term quarter-comma, for instance, emphasizes the fact in this temperament the just fifth (702 cents) is lowered by an interval corresponding to a fourth of Syntonic comma (21.5 cents / 4 = 5.375 cents): 696.6 cents. Other temperaments have been suggested by Werckmeister, Valotti and others all geared towards allowing modulation to distant key areas while keeping thirds and fifth as pure as possible.
+A number of variants have been in use, e.g. quarter-comma and third-comma meantone temperament. The term quarter-comma, for instance, emphasizes the fact in this temperament the just fifth (3/2 = 701.96 cents) is lowered by an interval corresponding to a fourth of Syntonic comma (21.5 cents / 4 = 5.38 cents): 696.58 cents. Other temperaments suggested by Werckmeister, Valotti and many more are all geared towards allowing modulation to distant key areas while keeping thirds and fifth as pure as possible.
 
-Many of these tunings and temperaments lead to tuning alternatives for any given key. For instance, in just intonation an Ab (8/5; going down by a just major third) is different from a G# (25/16; stacking two just major thirds). Keyboards such as the archicembalo built in 1588 have therefore been constructed to represent tuning alternatives. 
+Many of these tunings and temperaments lead to tuning alternatives for a given key. For instance, in just intonation an Ab (8/5; going down by a just major third) is different from a G# (25/16; stacking two just major thirds). Hence, Keyboards such as the archicembalo built in 1588 have  been constructed to represent tuning alternatives. 
 
 {% include img-figure url="/MUTOR/assets/images/unit9-Archicembalo_en_Cents.jpg" description="The Archicembalo had a large number of tuning alternatives for the 12 keys of the chromatic scale." %}
 
-A comprehensive list of tunings and temperaments (currently more than 4600 files) can be found in the [Scala Archive](http://www.huygens-fokker.org/microtonality/scales.html).
-
 # Equal Temperament
 
-The ultimate compromise has been achieved by introducing 12-tone equal temperament - the tuning of choice in the Classical, Romantic and Modern periods. Here, the discrepancy between 12 fifts and 7 octaves (Pythagorian comma; 23.46 cents) is _tempered out_ by dividing up the comma evenly (1.96 cents) and applying this value to all fifths: 701.96 cents - 1.96 cents = 700 cents. 
+The ultimate compromise has been achieved by introducing 12-tone equal temperament - the tuning of choice in the Classical, Romantic and Modern periods. Here, the discrepancy between 12 just fifts and 7 octaves (Pythagorian comma; 23.46 cents) is _tempered out_ by dividing up the comma evenly (23.46 / 12 = 1.96 cents) and applying this value to all fifths: 701.96 cents - 1.96 cents = 700 cents. 
 
 By tempering out fifths, the above-mentioned tuning alternatives become _enharmonically equivalent_, e.g. there is no longer a distinction between a G# and Ab. Due to equal temperament, approaches such as dodecaphony (invented by Arnold Schoenberg in 1923) and total serialism were developed, which treat all tones equally and subject them to mathematical set operations.
 
 ## Ambiguity
 
-We have already mentioned that the role of a chord depends on its context. Changing this role facilitates modulation such as when the tonic triad of C major is being reinterpreted as the subdominant of G major - C major serving as a _pivot_ chord between those two key areas.
+We have already established that the role of a chord depends on its context. Changing this role facilitates modulation such as when the tonic triad of C major is being reinterpreted as the subdominant of G major - C major serving as a _pivot_ chord between those two key areas.
 Via enharmonic equivalence, equal temperament adds another dimension to modulation as there is no *audible* distinction between the dominant seventh chord (e.g. G-B-D-F; a dominant in the key of C) and the German 6th chord (e.g. G-B-D-E#, a secondary dominant in the key of B). This ambiguity has been exploited by composers in the Classical and Romantic periods to quickly modulate to distant key areas. In the example below, Der Neugierige by Franz Schubert, Schubert exploits the harmonic ambiguity to create a musical analogy to the text by Wilhelm Müller: "One word is ‘yes’, the other is ‘no’; these two words contain for me the whole world".
 
 {% include img-figure url="/MUTOR/assets/images/unit9_Schubert-Der-Neugierige.png" description="Franz Schubert: Der Neugierige mm.35-46. The first blue area features the second inversion of the secondary dominant seventh chord on G resolving to the subdominant C in the key of G major. The second blue area features the German 6th chord, with the F respelled as E# resolving to the cadential 6-4 chord in B major." %}
@@ -168,62 +166,61 @@ Via enharmonic equivalence, equal temperament adds another dimension to modulati
 
 In the dominant seventh chord the dissonant F is resolved by downward motion (inwards) while in the German 6th chord the enharmonically equivalent leading tone E# moves up (outwards). This type of pivoting is comparable to the ambiguous cube illusion (featuring a type of a Necker cube) where a cube can either be perceived as projecting inwards or outwards. 
 
-Looking at the image for an extended period of time or periodically, the perspective of the cubes flips as the brain recognizes and realizes their ambiguity, but it can only represent one state at a time. In music, the harmonic frame of reference is given by the key area the chord is presented in, forcing one state over the other. But by skillfully moving into the ambiguous sonority, the music prepares the listener for the flip and leads him/her to realize the other state in a context where the precise timing of the events also matters.
+Looking at figure 9.7 for an extended period of time or intermittently, the perspective of the cubes flips as the brain recognizes and realizes their ambiguity, but it can only represent one state at a time. In music, the harmonic frame of reference is given by the key area, forcing one state over the other. But by skillfully moving into the ambiguous sonority, the music prepares the listener for the flip and leads him/her to realize the other state in a context where the precise timing of the events also matters.
 
 # Microtonality
-The term microtonality refers to the systematic exploration of tonal relationships that can not be derived from our tempered or quasi-tempered tuning. By comparison with the steps of the 12-tone tempered tuning (also called 12TET = "12-tone equal temperament”), in microtonal tunings deviations smaller than 100 cents are common. Hence the term microtonality.
+The term microtonality refers to the systematic exploration of relationships that cannot be derived from  12-tone equal temperament (12TET). In microtonal tunings, steps sizes or deviations from 12TET smaller than a semitone are common. Hence the term microtonality.
 
 Amongst the practitioners of microtonality, we can distinguish at least two main schools of thought:
 
 ## Just Intonation
-Representatives of this movement, which American composer Harry Partch ("Genesis of a Music") had a large impact on, focus on intervals that can be derived from the overtone series and its inversion, the undertone series. Parth refers to this as O-Tonality and U-Tonlity. In the process, rather unusual intervals such as 11/7 or 7/3 come to the foreground.
+Representatives of this movement, which American composer Harry Partch ("Genesis of a Music") had a large impact on, focus on intervals that can be derived from the overtone series and its inversion, the undertone series. Parth refers to this as O-Tonality and U-Tonality. In his music and theoretical writings, hitherto uncommon intervals such as 11/7 or 7/3 came to the foreground.
 
-{% include img-figure url="/MUTOR/assets/images/unit9_Partch-Diamond.png" description="Partch Diamond" %}
-{% include note author="vg" text="What is n-limit JI? Mention JI Notation" %}
+{% include img-figure url="/MUTOR/assets/images/unit9_Partch-Diamond.png" description="Arrangement of the bars in Harry Partch's Diamond Marimba in 11-limit just intonation" %}
 
-Figure 3. Arrangement of the bars in Harry Partch's Diamond Marimba in 11-limit just intonation.
+In Just Intonation (JI), we consider the relationships between prime numbers and their powers which can be geometrically arranged as lattices. The term n-limit Just Intonation refers to the prime number n up to which harmonic relationships are considered. In the medieval period,  3-limit JI (intervals derived from fifth relationships) was the norm, while during Renaissance 5-limit JI (adding thirds) became main-stream. In the 20th century, Partch added 7 and 11 for 11-limit JI and composers such as Marc Sabat and Wolfgang von Schweinitz have gone to 23-limit and beyond. They also invented the Extended Helmholtz-Ellis Just Intonation notation capable of capturing JI relationships by means of accidentals.
 
-In the 1980s, German musicologist Martin Vogel developed an electronic keyboard system, Mutabor, capable of retuning itself on the fly. As chords are thus always in tune, listeners will notice that the roots of the chords are shifting. Obviously, there is a trade-off between the purity of a chord and its stability in the linear, temporal dimension. Whether or not this is acceptable depends on the musical style. Jazz musician Jacob Collier, for instance, uses a similar on-the-fly tuning system developed at MIT which has created a deep interest in the Classical contemporary and Jazz communities.
+In the 1980s, German musicologist Martin Vogel developed an electronic keyboard system, Mutabor, capable of retuning itself on the fly. As chords are thus always in tune, listeners will notice that the roots of the chords are shifting. Obviously, there is a trade-off between the purity of a chord and its stability in the linear, temporal dimension. Whether or not this is acceptable depends on the musical style. Jazz musician Jacob Collier, for instance, uses a similar on-the-fly tuning system developed at MIT which has created a deep interest in the contemporary Classical  and Jazz communities.
 
 ## Equal Divisions 
 ### Divisions of the Whole Tone
-Subdivisions of the whole tone into four (quartertone tuning or 24-tone equal temperament [24TET] also known as equal devision of the octave in 24 steps [24EDO]), five (30TET) and six (36TET) were already theorized and practiced at the beginning of the 20th Century by composers such as Busoni, Hába, Wyschnegradsky and Ives. The 72-step "ekmelic" tuning - used in Byzantine music theory - closely approximates most of the lower harmonic overtones was popular amongst a number of 20th century composers, while Mexican composer Julian Carrillo had a piano patented in 1940 with a keyboard in 16th notes (96TET) spanning just one octave. 
+Subdivisions of the whole tone into four (quartertone tuning or 24-tone equal temperament [24TET] also known as equal devision of the octave in 24 steps [24EDO]), five (30TET) and six (36TET) were already theorized upon and practiced at the beginning of the 20th Century by composers such as Busoni, Hába, Wyschnegradsky and Ives. The 72-step "ekmelic" tuning - already used in Byzantine music theory - closely approximates 11-limit JI, while Mexican composer Julian Carrillo had a piano patented in 1940 with a keyboard in 16th notes (96TET) spanning just one octave, with a step size so small that playing a sequence of adjacent notes is perceived as a portamento.
 
 ### Other Divisions of the Octave
-In theory, the octave can be devided into an infinite number of steps. So what makes one scale more interesting than another? Obviously this depends on the style of the music and whether or not the music is meant to be performed on real instruments. One important aspect is how well the scale is capable of representing just intervals, e.g. small integer frequency ratios such as 3/2 or 5/4. Theorist seeking to find temperaments with even better fifths than 12TET have considered 41TET and 53 TET. 53TET is derived from stacking fifths and tempering out the small _schisma_ between 53 fifths and 31st octave. It was known to Chinese scholars in antiquity. 
+In theory, the octave can be devided into an infinite number of steps. So what makes one scale more interesting than another? Obviously this depends on the style of the music and whether or not the music is meant to be performed on real instruments. One important aspect is how well the scale is capable of representing just intervals, e.g. small integer frequency ratios such as 3/2 or 5/4. Theorists seeking to find temperaments with even better fifths than 12TET have considered 41TET and 53TET. The latter is derived from stacking fifths and tempering out the small _schisma_ between 53 fifths and 31 octaves. It was already known to Chinese scholars in antiquity. 
 
 {% include img-figure url="/MUTOR/assets/images/unit9_fifthstacker.png" description="Calculation of equidistant tunings based on stacking fifths" %}
 Figure 4. Calculation of the 53-tone (and other) equidistant tunings in Max 
 
 {% include note author="vg" text="create online version" %}
 
-In turn, 19TET (approximation of 1/3 comma meantone tuning) and 31TET (approximation of 1/4 comma meantone tuning) features excellent major thirds and have therefore even been considered by 20th century scholars such as Joseph Yasser and Adriaan Fokker as contenders for the replacement of 12TET. 
+In turn, 19TET (approximation of 1/3 comma meantone tuning) and 31TET (approximation of 1/4 comma meantone tuning) feature excellent major thirds and have even been considered by 20th century scholars such as Joseph Yasser and Adriaan Fokker as contenders for the replacement of 12TET. 
 
 In 1980 American composer Easley Blackwood wrote Twelve Microtonal Etudes for Electronic Music Media, the first systematic exploration of equidistant tunings from 13TET to 24TET.
 
-Many tunings such as at 17TET, 19TET, 22TET, 31TET, 41TET and 53TET also features a __diatonic__ sub set of pitches and therefore be used as alternative tunings for tonal music.  
+Many tunings such as at 17TET, 19TET, 22TET, 31TET, 41TET and 53TET also feature a __diatonic__ sub set of pitches and therefore be used as alternative tunings for tonal music.  
 
-These temperaments obey the following rule: 5 * m * s + 2 * n * s = 1200, where s is the step size of the temperament, and m and n are integers to be multiplied with s by to yield a diatoic whole tone or a semitone, resp. 
+These temperaments obey the following rule: 5 * m * s + 2 * n * s = 1200, where s is the step size of the temperament, and m and n are integers to be multiplied with s by to yield a diatonic whole tone or a semitone, resp. 
 
-This also applies: 5 * m + 2 * n = number of steps in the temperament. 
+The number of steps in the temperament (t) can be calculated by applying this formula: t = 5 * m + 2 * n.
 
-The following condition should also be fulfilled: 694 cents < (3 * m + n) * s < 710 cents.
+In order to avoid unpleasant fifths, the following condition should also be met: 694 cents < (3 * m + n) * s < 710 cents.
 
 Examples:
-For 12TET: m = 2 and n = 1,
-For 17TET: m = 3 and n = 1,
-For 19TET: m = 3 and n = 2,
-For 22TET: m = 4 and n = 1,
-For 31TET: m = 5 and n = 3,
-For 41TET: m = 7 and n = 3.
+For 12TET: m = 2 and n = 1
+For 17TET: m = 3 and n = 1
+For 19TET: m = 3 and n = 2
+For 22TET: m = 4 and n = 1
+For 31TET: m = 5 and n = 3
+For 41TET: m = 7 and n = 3
 
 ### Divisions of Other Intervals 
-The octave is a particular interval that creates a sense of unity with other other members of the same pitch class. In addition to the octave, of course, other intervals can be divided. Intervals that have been used extensively for this purpose are the just fifth (3/2) and the just twelfth (3/1), the latter bearing a close similarity to the octave. Examples are the scales (alpha, beta, gamma and delta) invented by microtonal composer Wendy Carlos and the Bohlen-Pierce scale.
+The octave is a particular interval that creates a sense of unity with other other members of the same pitch class. Instead of the octave, other  intervals can be used a frame for a repeating scale structure. Intervals that have been considered are the just fifth (3/2) and the just twelfth (3/1), the latter bearing a close similarity to the octave. Examples are the scales (alpha, beta, gamma and delta) invented by microtonal composer Wendy Carlos and the Bohlen-Pierce scale. In Elektronische Studie II, Karlheinz Stockhausen uses a scale dividing the just 5/1 interval into 25 steps.
 
 #### Bohlen-Pierce Scale
-The Bohlen-Pierce scale, first discovered and described in 1978 by engineer Heinz Bohlen divides the just twelfth into thirteen steps. The just version of the scale has a pitch set entirely made up of odd integer frequency ratios such as 5/3, 7/5, 7/3, 9/7 and 9/5. Some people also refer to this as 7-limit just intonation without 2 (3,5,7 pitch lattice).
+The Bohlen-Pierce scale, first discovered and described in 1970s by German engineer Heinz Bohlen (and independently re-discovered by John Pierce and Kees van Prooijen) divides the just twelfth into thirteen steps. The just version of the scale has a pitch set entirely made up of odd integer frequency ratios such as 5/3, 7/5, 7/3, 9/7 and 9/5. Some people also refer to this as 7-limit just intonation without 2 (3,5,7 pitch lattice).
 
-These intervals are also included in the spectrum of the clarinet, which is one of the few wind instruments that blow over at the twelfth. What could be more appropriate than developing a clarinet with the Bohlen-Pierce tuning? http://www.sfoxclarinets.com/bpclar.html. The equal tempered version of the scale is a  matches the just one much more closely than the 5-limit just and equal tempered versions of the chromatic scale. 
+These intervals are also included in the spectrum of the clarinet, which is one of the few wind instruments that blow over at the twelfth. What could be more appropriate than developing a clarinet with the Bohlen-Pierce tuning? http://www.sfoxclarinets.com/bpclar.html. Remarkably, the equal tempered version of the scale matches the JI version more closely than the 5-limit just and equal tempered versions of the chromatic scale match each other. 
 
 {% include img-figure url="/MUTOR/assets/images/unit9_BP-Scale_DifferentViews.png" description="Different representations of the Bohlen-Pierce scale" %}
 
@@ -233,30 +230,32 @@ These intervals are also included in the spectrum of the clarinet, which is one 
 
 
 ##### Bohlen-Pierce Microtonality
-As the equal-tempered step size of the Bohlen-Pierce scale is 146.3 cents, it is often referred to as a macrotonal scale, implying that the step size is larger than a semitone. But just like semitones of the chromatic scale, the Bohlen-Pierce scale can also be devided into smaller steps. Two microtonal scales have gained notoriety: The Bohlen-Pierce triple scale dividing the BP step into 3 and the Bohlen-Pierce quintuple scale dividing it into 5. Serendipitously, the resulting step size (1902 / 65 = 29.262 cents) is all but identical to 41TET (1200 / 41 = 29.268 cents). We can therefore claim that the Bohlen-Pierce is a subset of 41TET. This fact has far-reaching implications which have hardly been explored by composers and theorists.
+As the equal-tempered step size of the Bohlen-Pierce scale is 146.3 cents, it is often referred to as a _macrotonal_ scale, implying that its step size is larger than a semitone. But just like semitones of the chromatic scale, the Bohlen-Pierce scale can also be devided into smaller fractions. Two microtonal scales stand out: The Bohlen-Pierce triple scale dividing the BP step into 3 and the Bohlen-Pierce quintuple scale dividing the BP step into 5. Serendipitously, the resulting step size (1902 / 65 = 29.262 cents) is nearly identical to 41TET (1200 / 41 = 29.268 cents). We can therefore consider the Bohlen-Pierce a subset of 41TET. This fact has far-reaching implications which have barely been exploited by composers and theorists.
 
 ## Other Scales
-Another classes of tunings can not be classified into one group or the other. This includes the Indonesian pelog (gamelan music), which has a set of 5 small and 2 large unequal intervals, of which only 5 are used in traditional Gamelan music. According to William Sethares these instruments are tuned in such way that overall sensory dissonance of the mainly inharmonic sounds of the Gamelan orchestra reaches a minimum. Another way to smooth out the unpleasantness of the inharmonic sounds is the pair-wise performance of instruments tuned to slightly divergent pitch which creates vibrato-like beatings.
+Another classes of tunings cannot be classified into neither group. It includes the Indonesian pelog (gamelan music), which has a set of 5 small and 2 large unequal intervals, of which only 5 are used in traditional Gamelan music. According to William Sethares (see below) these instruments are tuned in such way that sonorities formed from the inharmonic sounds of the Gamelan orchestra strive for low sensory dissonance. To smooth out the unpleasantness of the inharmonic sounds is the pair-wise performance of instruments tuned to slightly different pitch which creates vibrato-like beatings.
 (The other scale commonly used in gamelan music, Slendro, is characterized by a quasi-equidistant 5-tone scale.)
 
 {% include img-figure url="/MUTOR/assets/images/unit9_Gamelan_Dissonance_Curve.png" description="Dissonance Curve for a Gamelan instrument" %}
 
 {% include img-figure url="/MUTOR/assets/images/unit9_Gamelan-Orchestra.png" description="A Gamelan orchestra" %}
 
+A comprehensive list of tunings and temperaments (currently more than 4600 files) can be found in the [Scala Archive](http://www.huygens-fokker.org/microtonality/scales.html).
+
 # Tuning, Timbre, Spectrum, Scale
-In 1998, the American music theorist and professor of electrical engineering Richard Sethares wrote a book titled Tuning, Timbre, Spectrum, Scale in which he focussed on the interdependence of consonance/dissonance and timbre. A strinking example for this is how the structure of a scale depends on the spectral content of the sonorities employed. If the sounds feature a stretched spectrum obtained by this formula (S being the stretch factor; 2 for harmonic series)
+In 1998, the American music theorist and professor of electrical engineering Richard Sethares wrote a book titled Tuning, Timbre, Spectrum, Scale in which he focussed on the interdependence of consonance/dissonance and timbre. A strinking example for this is how the structure of a scale depends on the spectral content of the sonorities employed. If the sounds feature a stretched spectrum obtained by this formula (S being the stretch factor; 2 for harmonic series),
 
 \begin{equation}
 f_n(stretched) = f_0 S^{(\frac{n}{log(2)})}
 \end{equation}
 
-a candence played with those sounds also asks for the scale to be stretched by the same amount. Otherwise, the chords and their progression sound out of tune. This is due to the lining up of the partials when playing sound simultaneously and sequentially. 
+a candence played with those sounds also asks for the scale to be stretched by the same amount. Otherwise, the chords and their progression will sound out of tune. This is due to the lining up of the partials when playing the spectra simultaneously and sequentially. 
 
 There are four scenarios to be considered:
 1. Neither the spectra nor the scales are stretched: all sounds in tune
 1. The spectra are stretched: the chords will sound dissonant
 1. The scale is stretched: the chord progression sounds out of tune
-1. Both spectra and scale are stretched: the chords and their progression sound convincing. 
+1. Both spectra and scale are stretched: the chords and their progression sound smooth. 
 
 Note that depending on the stretch factor, chords may still sound strange and wanting. This is explained by the fact that, due to the brain's ability to infer a virtual fundamental (f<sub>0</sub>), partials forming a harmonic spectrum (and - to lesser degree - tones forming a chord) will cause the sensation of a fundamental even though it may be absent from the spectrum. With stretched spectra, this virtual fundamental may not form a harmonic relationship with the members of chord, adding to its inharmonicity.
 
@@ -266,9 +265,9 @@ Note that depending on the stretch factor, chords may still sound strange and wa
 In Western tonal music, chord progressions follow certain _syntactic_ rules particularly in cadences and sequences. Thereby, the meaning of a chord depends on its position on a weak or strong beat. Consider the sonority G-C-E-G commonly referred to as a **second inversion 6-4 chord**. If positioned on the downbeat of measure, it is perceived as **cadential 6-4 chord**, first resolving to the dominant and then finally to the tonic. If positioned on a weak beat between a subdominant and its first inversion it is to be labeled as a **passing 6-4 chord** with no need to resolve any of its pitches.  
 
 # Harmony and Gestalt
-Intervals and chords are commonly derived from the harmonic series. The major triad has throughout history been explained as representative of the 4/5/6 relationship. The derivation of minor chord, in turn, has been more controversial. Some consider it the representation of the 10/12/15 relationship while other argue that it actually stems from subharmonic series, the inversion of the harmonic series (with the same relationship of the ordinal numbers 4/5/6 as the major chord). While chords taken from the subharmonic series may still be considered stable, they may lack a fundamental quality related to the creation of a virtual fundamental.
+Intervals and chords are commonly derived from the harmonic series. The major triad has throughout history been explained as representative of the 4/5/6 relationship. The derivation of minor chord, in turn, has been more controversial. Some consider it the representation of the 10/12/15 relationship while other argue that it actually stems from the subharmonic series, the inversion of the harmonic series - with the same relationship of the ordinal numbers 4/5/6 as the major chord. While chords taken from the subharmonic series may still be considered stable, they often lack a fundamental quality related to the perception of a virtual fundamental and, therefore, sound less resonant.
 
-Chords, therefore, need to be regarded as hierarchical gestalts of gestalts where aspects such as virtual fundamental, voicing, sensory dissonance and temporal succession (context) come into play.
+Instead, chords ought to be regarded as hierarchical gestalts of gestalts where aspects such as virtual fundamental, voicing, sensory dissonance and temporal succession (context) come into play.
 
 # Harmony in the 20th/21st Centuries
 
