--- a/_units/09.md
+++ b/_units/09.md
@@ -262,7 +262,7 @@ Note that depending on the stretch factor, chords may still sound strange and wa
 {% include note author="vg" text="We may need a JavaSxcript app here" %}
 
 # Harmony and Timing
-In Western tonal music, chord progressions follow certain _syntactic_ rules particularly in cadences and sequences. Thereby, the meaning of a chord depends on its position on a weak or strong beat. Consider the sonority G-C-E-G commonly referred to as a **second inversion 6-4 chord**. If positioned on the downbeat of measure, it is perceived as **cadential 6-4 chord**, first resolving to the dominant and then finally to the tonic. If positioned on a weak beat between a subdominant and its first inversion it is to be labeled as a **passing 6-4 chord** with no need to resolve any of its pitches.  
+In Western tonal music, chord progressions follow certain _syntactic_ rules particularly in cadences and sequences. Consequently, the meaning of a chord depends on its position on a weak or strong beat. Consider the sonority G-C-E-G commonly referred to as a **second inversion 6-4 chord**. If positioned on the downbeat of a measure, it is perceived as **cadential 6-4 chord**, first resolving to the dominant and then finally to the tonic. If positioned on a weak beat between a subdominant and its first inversion it is to be labeled as a **passing 6-4 chord** with no need to resolve any of its pitches.  
 
 # Harmony and Gestalt
 Intervals and chords are commonly derived from the harmonic series. The major triad has throughout history been explained as representative of the 4/5/6 relationship. The derivation of minor chord, in turn, has been more controversial. Some consider it the representation of the 10/12/15 relationship while other argue that it actually stems from the subharmonic series, the inversion of the harmonic series - with the same relationship of the ordinal numbers 4/5/6 as the major chord. While chords taken from the subharmonic series may still be considered stable, they often lack a fundamental quality related to the perception of a virtual fundamental and, therefore, sound less resonant.
