--- a/_units/09.md
+++ b/_units/09.md
@@ -243,13 +243,13 @@ Another classes of tunings cannot be classified into neither group. It includes 
 A comprehensive list of tunings and temperaments (currently more than 4600 files) can be found in the [Scala Archive](http://www.huygens-fokker.org/microtonality/scales.html).
 
 # Tuning, Timbre, Spectrum, Scale
-In 1998, the American music theorist and professor of electrical engineering Richard Sethares wrote a book titled Tuning, Timbre, Spectrum, Scale in which he focussed on the interdependence of consonance/dissonance and timbre. A strinking example for this is how the structure of a scale depends on the spectral content of the sonorities employed. If the sounds feature a stretched spectrum obtained by this formula (S being the stretch factor; 2 for harmonic series),
+In 1998, the American music theorist and professor of electrical engineering Richard Sethares wrote a book titled Tuning, Timbre, Spectrum, Scale in which he focussed on the interdependence of consonance/dissonance and timbre. A strinking example for this is how the structure of a scale depends on the spectral content of the sonorities employed. If a sound features a stretched spectrum obtained by this formula (S being the stretch factor; 2 for harmonic series),
 
 \begin{equation}
 f_n(stretched) = f_0 S^{(\frac{n}{log(2)})}
 \end{equation}
 
-a candence played with those sounds also asks for the scale to be stretched by the same amount. Otherwise, the chords and their progression will sound out of tune. This is due to the lining up of the partials when playing the spectra simultaneously and sequentially. 
+a candence made of this sound also asks for the scale to be stretched by the same amount. Otherwise, the chords and their progression will sound out of tune. This is due to the lining up of the partials when playing the spectra simultaneously and sequentially. 
 
 There are four scenarios to be considered:
 1. Neither the spectra nor the scales are stretched: all sounds in tune
@@ -265,7 +265,7 @@ Note that depending on the stretch factor, chords may still sound strange and wa
 In Western tonal music, chord progressions follow certain _syntactic_ rules particularly in cadences and sequences. Consequently, the meaning of a chord depends on its position on a weak or strong beat. Consider the sonority G-C-E-G commonly referred to as a **second inversion 6-4 chord**. If positioned on the downbeat of a measure, it is perceived as **cadential 6-4 chord**, first resolving to the dominant and then finally to the tonic. If positioned on a weak beat between a subdominant and its first inversion it is to be labeled as a **passing 6-4 chord** with no need to resolve any of its pitches.  
 
 # Harmony and Gestalt
-Intervals and chords are commonly derived from the harmonic series. The major triad has throughout history been explained as representative of the 4/5/6 relationship. The derivation of minor chord, in turn, has been more controversial. Some consider it the representation of the 10/12/15 relationship while others argue that it actually stems from the subharmonic series, the inversion of the harmonic series - with the same relationship of the ordinal numbers 4/5/6 as the major chord. While chords taken from the subharmonic series may still be considered stable, they often lack a fundamental quality related to the perception of a virtual fundamental and, therefore, sound less resonant.
+Intervals and chords are commonly derived from the harmonic series. The major triad has throughout history been explained as representative of the 4/5/6 relationship. The derivation of minor chord, in turn, has been more controversial. Some consider it a representation of the 10/12/15 relationship while others argue that it actually stems from the subharmonic series, the inversion of the harmonic series - with the same relationship of the ordinal numbers 4/5/6 as the major chord. While chords taken from the subharmonic series may still be considered stable, they often lack a fundamental quality related to the perception of a virtual fundamental and, therefore, sound less resonant.
 
 Instead, chords ought to be regarded as hierarchical gestalts of gestalts where aspects such as virtual fundamental, voicing, sensory dissonance and temporal succession (context) come into play.
 
