--- a/_units/09.md
+++ b/_units/09.md
@@ -345,7 +345,7 @@ The max patches for the unit can be downloaded here:  max.zip
 
 Grove Dictionary of Music and Musicians:  http://www.grovemusic.com
 
-Merriam-Webster Dictioinary:  http://www.m-w.com
+Merriam-Webster Dictionary:  http://www.m-w.com
 
 Wikipedia has many pages dedicated to issues of tuning and temperament:  http://en.wikipedia.org/wiki/Musical_temperament
 
